[package]
name = "summarize"
authors = ["Mike Dallas <mcdallas@protonmail.com>"]
repository = "https://github.com/mcdallas/summarize"
description = "CLI tool to summarize audio/video files"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.153", features = ["derive"] }
