[package]
name = "summarize"
authors = ["Mike Dallas <mcdallas@protonmail.com>"]
repository = "https://github.com/mcdallas/summarize"
description = "CLI tool to summarize audio/video files"
license = "MIT"
readme = "README.md"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
futures = "0.3.29"
log = "0.4.20"
reqwest = { version = "0.11.14", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tempdir = "0.3.7"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"
